<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:cursorVisible="false"
            android:hint="@string/nombre_completo"
            android:text="@string/nombre_usuario"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_time"
            android:text="@string/fecha_usuario"
            android:textStyle="italic"
            android:focusable="false"
            android:clickable="true"
            android:onClick="showDatePickerDialog"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/telefono"
            android:inputType="number|phone"
            android:text="@string/fecha_usuario"
            android:textColor="@color/colorAzul"
            android:textSize="20dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:text="@string/email_usuario"
            android:textStyle="italic"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/descripcion"
            android:textStyle="italic|bold"
            android:textSize="12dp"
            android:textColor="@color/colorNegro"
            />

        <EditText
            android:id="@+id/edtDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/desc"
            android:text="@string/descripcion_contacto"
            android:textStyle="italic"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:maxLines="4"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/siguiente"
            android:onClick="PresionarSiguiente"
            />


    </LinearLayout>

